--- a/paper.bib
+++ b/paper.bib
@@ -560,70 +560,24 @@ pages="174--189",
 isbn="978-3-642-41582-1"
 }
 
-@book{10.5555/1965123,
-    author = {Bertot, Yves and Castran, Pierre},
-    title = {Interactive Theorem Proving and Program Development: Coq'Art The Calculus of Inductive Constructions},
-    year = {2010},
-    isbn = {3642058809},
-    publisher = {Springer Publishing Company, Incorporated},
-    edition = {1st},
+
+
+
+@Manual{agda-2-6-2,
+  title = {Agda 2.6.2 documentation},
+  author = {{Agda Development Team}},
+  year = 2021,
+  url = "https://agda.readthedocs.io/en/v2.6.2/",
 }
 
-      
-
-@inproceedings{10.5555/1813347.1813352,
-    author = {Norell, Ulf},
-    title = {Dependently Typed Programming in Agda},
-    year = {2008},
-    isbn = {3642046517},
-    publisher = {Springer-Verlag},
-    address = {Berlin, Heidelberg},
-    booktitle = {Proceedings of the 6th International Conference on Advanced Functional Programming},
-    pages = {230–266},
-    numpages = {37},
-    location = {Heijen, The Netherlands},
-    series = {AFP'08}
-    }
-
-      
-
-@inproceedings{conf/cade/MouraKADR15,
-  added-at = {2017-05-21T00:00:00.000+0200},
-  author = {de Moura, Leonardo Mendonça and Kong, Soonho and Avigad, Jeremy and van Doorn, Floris and von Raumer, Jakob},
-  biburl = {https://www.bibsonomy.org/bibtex/2d040cca1a430f5fdff2fc3da7ef43c4e/dblp},
-  booktitle = {CADE},
-  crossref = {conf/cade/2015},
-  editor = {Felty, Amy P. and Middeldorp, Aart},
-  ee = {https://doi.org/10.1007/978-3-319-21401-6_26},
-  interhash = {c7d34dd8a3cfc0e30272dbe35c8faa66},
-  intrahash = {d040cca1a430f5fdff2fc3da7ef43c4e},
-  isbn = {978-3-319-21400-9},
-  keywords = {dblp},
-  pages = {378-388},
-  publisher = {Springer},
-  series = {Lecture Notes in Computer Science},
-  timestamp = {2019-05-15T18:56:21.000+0200},
-  title = {The Lean Theorem Prover (System Description).},
-  url = {http://dblp.uni-trier.de/db/conf/cade/cade2015.html#MouraKADR15},
-  volume = 9195,
-  year = 2015
-}        
-
-
-@article{JFP:9060502,
-  author = {Brady,Edwin},
-  title = {Idris, a general-purpose dependently typed programming language: Design and implementation},
-  journal = {Journal of Functional Programming},
-  volume = {23},
-  issue = {05},
-  month = {9},
-  year = {2013},
-  issn = {1469-7653},
-  pages = {552--593},
-  numpages = {42},
-  doi = {10.1017/S095679681300018X},
-  URL = {https://journals.cambridge.org/article_S095679681300018X},
-}        
+@book{Coq-8-13-2,
+  author =        {{Coq} Development Team, The},
+  note =          {Version 8.13.2},
+  organization =  {LogiCal Project},
+  title =         {The {Coq} proof assistant reference manual},
+  year =          {2021},
+  url =           {https://coq.github.io/doc/v8.13/refman/},
+}         
 
 @inproceedings{pushpull,
  author = {Svensson, Bo Joel and Svenningsson, Josef},
@@ -845,4 +799,126 @@ YEAR="1988"}
   timestamp = {Mon, 31 May 2021 16:16:57 +0200},
   biburl    = {https://dblp.org/rec/journals/corr/abs-2105-10819.bib},
   bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{PasalicTS02,
+  title = {Tagless staged interpreters for typed languages},
+  author = {Emir Pasalic and Walid Taha and Tim  Sheard},
+  year = {2002},
+  doi = {10.1145/581478.581499},
+  url = {http://doi.acm.org/10.1145/581478.581499},
+  tags = {interpreter},
+  researchr = {https://researchr.org/publication/PasalicTS02},
+  cites = {0},
+  citedby = {0},
+  pages = {218-229},
+  booktitle = {Proceedings of the seventh {ACM SIGPLAN} international conference on Functional Programming {(ICFP 2002)}},
+}
+
+
+
+@book{10.5555/1965123,
+    author = {Bertot, Yves and Castran, Pierre},
+    title = {Interactive Theorem Proving and Program Development: Coq'Art The Calculus of Inductive Constructions},
+    year = {2010},
+    isbn = {3642058809},
+    publisher = {Springer Publishing Company, Incorporated},
+    edition = {1st},
+}
+
+      
+
+@inproceedings{10.5555/1813347.1813352,
+    author = {Norell, Ulf},
+    title = {Dependently Typed Programming in Agda},
+    year = {2008},
+    isbn = {3642046517},
+    publisher = {Springer-Verlag},
+    address = {Berlin, Heidelberg},
+    booktitle = {Proceedings of the 6th International Conference on Advanced Functional Programming},
+    pages = {230–266},
+    numpages = {37},
+    location = {Heijen, The Netherlands},
+    series = {AFP'08}
+    }
+
+      
+
+@inproceedings{conf/cade/MouraKADR15,
+  added-at = {2017-05-21T00:00:00.000+0200},
+  author = {de Moura, Leonardo Mendonça and Kong, Soonho and Avigad, Jeremy and van Doorn, Floris and von Raumer, Jakob},
+  biburl = {https://www.bibsonomy.org/bibtex/2d040cca1a430f5fdff2fc3da7ef43c4e/dblp},
+  booktitle = {CADE},
+  crossref = {conf/cade/2015},
+  editor = {Felty, Amy P. and Middeldorp, Aart},
+  ee = {https://doi.org/10.1007/978-3-319-21401-6_26},
+  interhash = {c7d34dd8a3cfc0e30272dbe35c8faa66},
+  intrahash = {d040cca1a430f5fdff2fc3da7ef43c4e},
+  isbn = {978-3-319-21400-9},
+  keywords = {dblp},
+  pages = {378-388},
+  publisher = {Springer},
+  series = {Lecture Notes in Computer Science},
+  timestamp = {2019-05-15T18:56:21.000+0200},
+  title = {The Lean Theorem Prover (System Description).},
+  url = {http://dblp.uni-trier.de/db/conf/cade/cade2015.html#MouraKADR15},
+  volume = 9195,
+  year = 2015
+}        
+
+
+@article{JFP:9060502,
+  author = {Brady,Edwin},
+  title = {Idris, a general-purpose dependently typed programming language: Design and implementation},
+  journal = {Journal of Functional Programming},
+  volume = {23},
+  issue = {05},
+  month = {9},
+  year = {2013},
+  issn = {1469-7653},
+  pages = {552--593},
+  numpages = {42},
+  doi = {10.1017/S095679681300018X},
+  URL = {https://journals.cambridge.org/article_S095679681300018X},
+}
+
+@misc{postscript1999language,
+  title={Language Reference Third Edition},
+  author={{Adobe Systems Incorporated}},
+  year={1999},
+  publisher={Addison-Wesley Publishing}
+}
+
+@inproceedings{Brady21-1,
+  title = {Idris 2: Quantitative Type Theory in Practice},
+  author = {Edwin C. Brady},
+  year = {2021},
+  doi = {10.4230/LIPIcs.ECOOP.2021.9},
+  url = {https://doi.org/10.4230/LIPIcs.ECOOP.2021.9},
+  researchr = {https://researchr.org/publication/Brady21-1},
+  cites = {0},
+  citedby = {0},
+  booktitle = {35th European Conference on Object-Oriented Programming, ECOOP 2021, July 11-17, 2021, Aarhus, Denmark (Virtual Conference)},
+  editor = {Anders Møller and Manu Sridharan},
+  volume = {194},
+  series = {LIPIcs},
+  publisher = {Schloss Dagstuhl - Leibniz-Zentrum für Informatik},
+  isbn = {978-3-95977-190-0},
+}
+
+@inproceedings{Cockx19,
+  title = {Type Theory Unchained: Extending Agda with User-Defined Rewrite Rules},
+  author = {Jesper Cockx},
+  year = {2019},
+  doi = {10.4230/LIPIcs.TYPES.2019.2},
+  url = {https://doi.org/10.4230/LIPIcs.TYPES.2019.2},
+  researchr = {https://researchr.org/publication/Cockx19},
+  cites = {0},
+  citedby = {0},
+  booktitle = {25th International Conference on Types for Proofs and Programs, TYPES 2019, June 11-14, 2019, Oslo, Norway},
+  editor = {Marc Bezem and Assia Mahboubi},
+  volume = {175},
+  series = {LIPIcs},
+  publisher = {Schloss Dagstuhl - Leibniz-Zentrum für Informatik},
+  isbn = {978-3-95977-158-0},
 }
