Full pass over paper, mostly cosmetic changes

--- a/paper.tex
+++ b/paper.tex
@@ -315,8 +315,8 @@ allows us to focus on the essence of the proposed approach and avoid unrelated
 technical details.  We ensure that many verification patterns found in bigger
 languages are covered, showing that the proposed approach scales.
 
-This entire paper is a literate Agda script: all Agda code is typechecked
-and all the examples are run while generating the paper.
+This entire paper is a literate Agda script: all code is typechecked
+while generating the paper.
 
 
 \paragraph{Contributions.}
