Use proper color for macro calls

--- a/paper.tex
+++ b/paper.tex
@@ -99,6 +99,7 @@
 \newcommand{\AM}[1]{\AgdaModule{#1}}
 \newcommand{\AN}[1]{\AgdaNumber{#1}}
 \newcommand{\AS}[1]{\AgdaString{#1}}
+\newcommand{\AMA}[1]{\AgdaMacro{#1}}
 
 \newcommand\codeblock[1]{%
   %{\fbox{\begin{varwidth}{0.9\textwidth}#1\end{varwidth}}}
