Kill hanging lines, center fig 1

--- a/paper.tex
+++ b/paper.tex
@@ -162,10 +162,10 @@
 \begin{abstract}
 
   Most existing programming languages provide little support to formally
-  state and prove properties about programs.  Adding such capabilities is far
+  state and prove properties about programs.  Ad\-ding such capabilities is far
   from trivial, as it requires significant re-engineering of the existing
   compilers and tools.  This paper proposes a novel technique to write
-  correct-by-construction programs in languages without built-in verification
+  correct-by-con\-struc\-tion programs in languages without built-in verification
   capabilities, while maintaining the ability to use existing tools.
   This is achieved in three steps.  Firstly, we
   give a shallow embedding of the language (or a subset) into a
@@ -177,7 +177,7 @@
 
   Our main insight is that it is possible to
   express all three steps in a single language that supports
-  both dependent types and reflection. Essentially,
+  both dependent typ\-es and reflection. Essentially,
   this allows us to express a program, its formal properties, and
   a compiler for it hand-in-hand, offering a lot of flexibility to programmers.
   We demonstrate this three-step approach by embedding a subset of
@@ -414,7 +414,7 @@ work on metaprogramming facilities in various programming
 languages.  \citet{refl-masses} track the origins
 of metaprogramming to Smith's work on reflection in Lisp \cite{refl-lisp}.
 Some prominent metaprogramming systems include
-MetaOcaml \cite{metaocaml}, MetaML \cite{metaml},
+MetaOcaml \cite{metaocaml}, Me\-taML \cite{metaml},
 reFlect \cite{DBLP:journals/jfp/GrundyMO06},
 Template Haskell \cite{sheard2002template},
 Racket \cite{plt-tr1}, and various other Lisp/Scheme dialects.
