bugfix in sierpinski, add colors to urls and citations

--- a/paper.tex
+++ b/paper.tex
@@ -1,4 +1,4 @@
-\documentclass[sigplan,anonymous,review]{acmart}
+\documentclass[sigplan,screen,anonymous,review]{acmart}
 
 %% Bibliography style
 \bibliographystyle{ACM-Reference-Format}
@@ -35,6 +35,7 @@
 \lstset{
     basicstyle=\small,
 }
+\usepackage{microtype}
 
 %\usepackage[T1]{fontenc}
 
