--- a/paper.tex
+++ b/paper.tex
@@ -275,7 +275,7 @@ of the host language to typecheck the embedded language.
 There are two common approaches to language embedding: deep and shallow.
 A shallow embedding defines a language in terms of functions and operators
 of the host language.  Programs in a shallowly-embedded language are programs
-in the host language, so they are immediately runnable; types of the embedded
+in the host language, so they are immediately run\-nable; types of the embedded
 language are types of the host language, so the host typechecker is used for
 checking embedded programs.  The downside of this approach is that we cannot
 easily get the representation of embedded programs.
@@ -338,7 +338,7 @@ while generating the paper.
   reflection.
 
 \item We demonstrate this approach by a concrete example: an embedding
-  of (a subset of the) PostScript language into Agda
+  of a subset of the PostScript language into Agda
   (\secref{embedding}). We give several examples of PostScript
   programs written in our embedding, and demonstrate how to statically
   enforce properties such as the absence of stack underflows,
