Restore 12 pages limit

--- a/paper.tex
+++ b/paper.tex
@@ -565,7 +565,7 @@ this in principle.
 % on the way to make verified software easily accessible.
 % To paraphrase Jim Morrison: ``Safety and no surprise, The End''.
 
-
+\pagebreak
 %% Bibliography
 \bibliography{paper}
 
