--- a/paper.tex
+++ b/paper.tex
@@ -510,6 +510,13 @@ this in principle.
 % on the way to make verified software easily accessible.
 % To paraphrase Jim Morrison: ``Safety and no surprise, The End''.
 
+\begin{acks}
+We would like to thank reviewers for their constructive suggestions.
+This work is supported by the \grantsponsor{EPSRC}{Engineering and Physical
+Sciences Research Council}{https://epsrc.ukri.org} through the grant
+\grantnum{EPSRC001}{EP/N028201/1}.
+\end{acks}
+
 \pagebreak
 %% Bibliography
 \bibliography{paper}
