--- a/paper.tex
+++ b/paper.tex
@@ -1,5 +1,29 @@
 \documentclass[sigplan,screen]{acmart}
 
+%%% FIXME I am didnt update publishing rights yet, as I am waiting for
+%%% the university to comeback with the payment instructions for open access.
+
+%%% If you see 'ACMUNKNOWN' in the 'setcopyright' statement below,
+%%% please first submit your publishing-rights agreement with ACM (follow link on submission page).
+%%% Then please update our instructions page and copy-and-paste the NEW commands into your article.
+%%% Please contact us in case of questions; allow up to 10 min for the system to propagate the information.
+%%%
+%%% The following is specific to GPCE '21 and the paper
+%%% 'Extracting the Power of Dependent Types'
+%%% by Artjoms Šinkarovs and Jesper Cockx.
+%%%
+\setcopyright{rightsretained} % XXX ENSURE THAT THIS VALUE IS CORRECT!!!
+\acmPrice{15.00}
+\acmDOI{10.1145/3486609.3487201}
+\acmYear{2021}
+\copyrightyear{2021}
+\acmSubmissionID{splashws21gpcemain-p18-p}
+\acmISBN{978-1-4503-9112-2/21/10}
+\acmConference[GPCE '21]{Proceedings of the 20th ACM SIGPLAN International Conference on Generative Programming: Concepts and Experiences}{October 17--18, 2021}{Chicago, IL, USA}
+\acmBooktitle{Proceedings of the 20th ACM SIGPLAN International Conference on Generative Programming: Concepts and Experiences (GPCE '21), October 17--18, 2021, Chicago, IL, USA}
+
+
+
 %% Bibliography style
 \bibliographystyle{ACM-Reference-Format}
 
@@ -517,7 +541,7 @@ Sciences Research Council}{https://epsrc.ukri.org} through the grant
 \grantnum{EPSRC001}{EP/N028201/1}.
 \end{acks}
 
-\pagebreak
+%\pagebreak
 %% Bibliography
 \bibliography{paper}
 
