--- a/paper.bib
+++ b/paper.bib
@@ -815,6 +815,20 @@ YEAR="1988"}
   booktitle = {Proceedings of the seventh {ACM SIGPLAN} international conference on Functional Programming {(ICFP 2002)}},
 }
 
+@InProceedings{Tagless,
+author="Carette, Jacques
+and Kiselyov, Oleg
+and Shan, Chung-chieh",
+editor="Shao, Zhong",
+title="Finally Tagless, Partially Evaluated",
+booktitle="Programming Languages and Systems",
+year="2007",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="222--238",
+abstract="We have built the first family of tagless interpretations for a higher-order typed object language in a typed metalanguage (Haskell or ML) that require no dependent types, generalized algebraic data types, or postprocessing to eliminate tags. The statically type-preserving interpretations include an evaluator, a compiler (or staged evaluator), a partial evaluator, and call-by-name and call-by-value CPS transformers.",
+isbn="978-3-540-76637-7"
+}
 
 
 @book{10.5555/1965123,
