A few additions/tweaks to the parts addressing reviewer comments

--- a/paper.bib
+++ b/paper.bib
@@ -936,3 +936,35 @@ isbn="978-3-540-76637-7"
   publisher = {Schloss Dagstuhl - Leibniz-Zentrum für Informatik},
   isbn = {978-3-95977-158-0},
 }
+
+@article{Leroy09,
+  title = {Formal verification of a realistic compiler},
+  author = {Xavier Leroy},
+  year = {2009},
+  doi = {10.1145/1538788.1538814},
+  url = {http://doi.acm.org/10.1145/1538788.1538814},
+  tags = {programming languages, semantics, semantic preservation, proof assistant, CompCert, program verification, formal semantics, type soundness, source-to-source, C++, compiler, programming, context-aware, open-source},
+  researchr = {https://researchr.org/publication/Leroy09},
+  cites = {0},
+  citedby = {0},
+  journal = {Communications of the ACM},
+  volume = {52},
+  number = {7},
+  pages = {107-115},
+}
+
+@inproceedings{KumarMNO14,
+  title = {CakeML: a verified implementation of ML},
+  author = {Ramana Kumar and Magnus O. Myreen and Michael Norrish and Scott Owens},
+  year = {2014},
+  doi = {10.1145/2535838.2535841},
+  url = {http://doi.acm.org/10.1145/2535838.2535841},
+  researchr = {https://researchr.org/publication/KumarMNO14},
+  cites = {0},
+  citedby = {0},
+  pages = {179-192},
+  booktitle = {The 41st Annual ACM SIGPLAN-SIGACT Symposium on Principles of Programming Languages, POPL '14, San Diego, CA, USA, January 20-21, 2014},
+  editor = {Suresh Jagannathan and Peter Sewell},
+  publisher = {ACM},
+  isbn = {978-1-4503-2544-8},
+}
