--- a/paper.tex
+++ b/paper.tex
@@ -185,7 +185,7 @@
   in that embedding, and we use dependent types to guarantee
   correctness properties of interest within the embedding.  Thirdly, we
   extract a program written in the original language,
-  so that it can be used by the existing compilers and tools.
+  so it can be used with existing compilers and tools.
 
   Our main insight is that it is possible to
   express all three steps in a single language that supports
@@ -247,10 +247,17 @@ approach works beautifully for embedded languages with simple type
 systems. However, for embedded languages with dependent types, tagless
 interpreters are technically
 possible~\citep{CHAPMAN200921,10.1007/978-3-540-74464-1_7}, but are
-\emph{extremely challenging} to define and use in practice.
-For further details on why exactly this is challenging refer to the
-first section of~\cite{10.1145/1863495.1863497} where the problem is meticulously
-explained by~\citeauthor{10.1145/1863495.1863497}.
+\emph{extremely} challenging to define and use in practice.
+%
+In particular, the mutual dependencies between the syntax for
+contexts, types, and terms and the definitional equality of the object
+language require large and complex inductive-inductive or
+inductive-recursive to encode
+\cite{10.1007/978-3-540-74464-1_7,CHAPMAN200921,10.1145/1863495.1863497}.
+%
+Even if we manage to give a faithful deep embedding of the language,
+actually writing programs in it is still an arduous task compared
+to writing programs in the meta-language directly.
 
 The key insight of this paper lies in proposing a novel approach that
 combines the best parts of shallow and deep embeddings through the use
@@ -328,13 +335,13 @@ all code is typechecked while generating the paper.
 When dealing with embedded languages that are extracted and run
 by external compilers, we are fundamentally bound to have potential
 semantic mismatches.  Semantics of the embedding may differ from the
-semantics implemented by external compilers, as well as translation from the
-embedding back to external compilers can be faulty.  Real world compilers
+semantics implemented by external compilers, and the translation from the
+embedding back to external compilers can also be faulty.  Real world compilers
 face exactly the same problem: how do you know that generated assembly
 code is doing what you think it is doing?  Addressing such problems
 requires fully verified toolchains that run on a verified hardware.
 Enormous research efforts are spent towards addressing this
-problem, but this is beyond the scope of this paper.
+problem~\cite{Leroy09,KumarMNO14}, but this is beyond the scope of this paper.
 
 
 
