Add my orcid + acknowledge NWO

--- a/paper.tex
+++ b/paper.tex
@@ -159,7 +159,7 @@
 \author[J. Cockx]{Jesper Cockx}
 %\authornote{with author1 note}          %% \authornote is optional;
                                          %% can be repeated if necessary
-%\orcid{nnnn-nnnn-nnnn-nnnn}             %% \orcid is optional
+\orcid{0000-0003-3862-4073}              %% \orcid is optional
 \affiliation{%
   \institution{TU Delft}
   \city{Delft}
@@ -558,9 +558,11 @@ this in principle.
 
 \begin{acks}
 We would like to thank reviewers for their constructive suggestions.
-This work is supported by the \grantsponsor{EPSRC}{Engineering and Physical
-Sciences Research Council}{https://epsrc.ukri.org} through the grant
-\grantnum{EPSRC001}{EP/N028201/1}.
+This work is supported by the \grantsponsor{EPSRC}{Engineering and
+Physical Sciences Research Council}{https://epsrc.ukri.org} through
+the grant \grantnum{EPSRC001}{EP/N028201/1}, and the
+\grantsponsor{NWO}{Dutch Research Council}{https://www.nwo.nl/en}
+through the grant VI.Veni.202.216.
 \end{acks}
 
 %\pagebreak
