--- a/paper.tex
+++ b/paper.tex
@@ -252,7 +252,7 @@ possible~\citep{CHAPMAN200921,10.1007/978-3-540-74464-1_7}, but are
 In particular, the mutual dependencies between the syntax for
 contexts, types, and terms and the definitional equality of the object
 language require large and complex inductive-inductive or
-inductive-recursive to encode
+inductive-recursive types to encode
 \cite{10.1007/978-3-540-74464-1_7,CHAPMAN200921,10.1145/1863495.1863497}.
 %
 Even if we manage to give a faithful deep embedding of the language,
