--- a/paper.bib
+++ b/paper.bib
@@ -897,7 +897,7 @@ isbn="978-3-540-76637-7"
 }
 
 @misc{postscript1999language,
-  title={Language Reference Third Edition},
+  title={PostScript Language Reference Third Edition},
   author={{Adobe Systems Incorporated}},
   year={1999},
   publisher={Addison-Wesley Publishing}
