Fix overfull lines

--- a/paper.tex
+++ b/paper.tex
@@ -48,6 +48,11 @@
 }
 \usepackage{microtype}
 
+% Fixing overfull lines
+\emergencystretch=10.0pt % default 0.0pt
+\hyphenpenalty=500 % default 50
+\exhyphenpenalty=500 % default 50
+
 %\usepackage[T1]{fontenc}
 
 \newunicodechar{∷}{::}
